# m3u8-GUI

./: .gitignore  Cargo.toml  Future.md  README.md  build.rs  criar m3u8 de playlist do YouTube.ps1  criar m3u8 de playlist do YouTube.py
.github/workflows/: Build and Release Linux.yml  Build and Release MultiOS.yaml  Build and Release windows.yml  main.yml  main2.yml  main3.yml  main4.yml
resources/: icon.res
src/: generate_m3u8.rs  gerar_m3u8.rs  main.rs
