[package]
name = "m3u8-GUI"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.4"
md5 = "0.7.0"
rfd = "0.15.3"
jzon = "0.12.5"
powershell = {path = "../PowerShell-for-Rust/powershell"}

[profile.release]       # ITC = Impacto no tempo de compilação
opt-level = 3           # Máxima otimização. (padrão no --release)
lto = "fat"             # Otimização total na ligação. ITC: Alto. (não padrão)
codegen-units = 1       # Mais otimizações, menos paralelismo. ITC: Moderado a Alto. (não padrão)
panic = "abort"         # Aborta em pânico, reduzindo código de tratamento (não padrão)
strip = true            # Remove símbolos de depuração, reduzindo o tamanho do binário. (não padrão)
incremental = false     # ITC: Moderado. (padrão)
debug = false           # (padrão)
rpath = false           # (não padrão)
split-debuginfo = "off" # (não padrão)